# ast-match

./: INTERNAL.md  README.md  pytest.ini  setup.cfg
ast_match/: __init__.py  parse.py  pattern.py
docs/: ast_match.rst  conf.py  index.rst
docs/source/: conf.py  index.rst
