[metadata]
name = ast-match
version = 0.0.0
author = user202729
description = A library to facilitate easier manipulation of Python AST (abstract syntax tree) objects.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/ast-match
classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages =
    ast_match
